ZYBO/zybo_vivado_proj/zybo_vivado_proj.sdk/.metadata/.plugins/org.eclipse.cdt.ui/standalone_bsp_0_xgpio_intr_example_1.build.log
13:50:07 **** Build of configuration Debug for project standalone_bsp_0_xgpio_intr_example_1 ****
make all 
'Building file: ../src/xgpio_intr_example.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xgpio_intr_example.o" -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/xgpio_intr_example.d" -MT"src/xgpio_intr_example.d" -o "src/xgpio_intr_example.o" "../src/xgpio_intr_example.c"
../src/xgpio_intr_example.c: In function 'main':
../src/xgpio_intr_example.c:125:25: error: 'XPAR_PUSH_BUTTONS_4BITS_DEVICE_ID' undeclared (first use in this function)
 #define GPIO_DEVICE_ID  XPAR_PUSH_BUTTONS_4BITS_DEVICE_ID
                         ^
../src/xgpio_intr_example.c:238:35: note: in expansion of macro 'GPIO_DEVICE_ID'
  Status = XGpio_Initialize(&Gpio, GPIO_DEVICE_ID);
                                   ^
../src/xgpio_intr_example.c:125:25: note: each undeclared identifier is reported only once for each function it appears in
 #define GPIO_DEVICE_ID  XPAR_PUSH_BUTTONS_4BITS_DEVICE_ID
                         ^
../src/xgpio_intr_example.c:238:35: note: in expansion of macro 'GPIO_DEVICE_ID'
  Status = XGpio_Initialize(&Gpio, GPIO_DEVICE_ID);
                                   ^
../src/xgpio_intr_example.c: In function 'SetupInterruptSystem':
../src/xgpio_intr_example.c:126:32: error: 'XPAR_INTC_0_GPIO_2_VEC_ID' undeclared (first use in this function)
 #define INTC_GPIO_INTERRUPT_ID XPAR_INTC_0_GPIO_2_VEC_ID
                                ^
../src/xgpio_intr_example.c:530:50: note: in expansion of macro 'INTC_GPIO_INTERRUPT_ID'
  XScuGic_SetPriorityTriggerType(IntcInstancePtr, INTC_GPIO_INTERRUPT_ID,
                                                  ^
make: *** [src/xgpio_intr_example.o] Error 1

13:50:08 Build Finished (took 750ms)

